fix(text): no overlap of IOF

--- a/app/assets/Text.css
+++ b/app/assets/Text.css
@@ -75,6 +75,6 @@
 }
 
 .theme-iof .Text__Content {
-    line-height: 1.2;
+    /*line-height: 1.2;*/
 }
 
